[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://assets/AtariClassic-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Level/Line.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/gameover.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/victory.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 640, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 360 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 360 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 5 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="Line" parent="." instance=ExtResource( 6 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="PlayerScore" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 10.0
margin_right = -50.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="EnemyScore" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 50.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="Player" parent="." instance=ExtResource( 1 )]
visible = false

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2( 33, -160 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 608, 152 )
shape = SubResource( 1 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 8, 728 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( 632, 0 )
shape = SubResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 1203, 352 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 640, 328 )

[node name="LeftArea" type="Area2D" parent="."]
position = Vector2( -16, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2( -24, 352 )
shape = SubResource( 3 )

[node name="RightArea" type="Area2D" parent="."]
position = Vector2( 1296, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2( 24, 352 )
shape = SubResource( 4 )

[node name="CountdownTimer" type="Timer" parent="."]
one_shot = true

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="Lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="StartGame" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -44.0
margin_right = 243.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
text = "Start game!"

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -168.0
margin_right = 192.0
margin_bottom = -80.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[connection signal="body_entered" from="LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_entered" from="RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="pressed" from="StartGame" to="." method="start_game"]
